objects/FieloEE__Event__c.object
<CustomObject>
    <customHelpPage>FieloEE__EventHelpBackEnd</customHelpPage>
    <description>Actions that do not generate points performed by members.</description>
    <fields>
        <fullName>F_PRM_EventCatalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Catalog</label>
        <referenceTo>FieloPRM_EventCatalog__c</referenceTo>
        <relationshipLabel>Event</relationshipLabel>
        <relationshipName>Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_ExternalPropertyEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property or Activity Event</label>
        <referenceTo>PRMExternalPropertyEvent__c</referenceTo>
        <relationshipLabel>Event</relationshipLabel>
        <relationshipName>Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_MemberExternalProperties__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Properties and Activities</label>
        <referenceTo>MemberExternalProperties__c</referenceTo>
        <relationshipLabel>Event</relationshipLabel>
        <relationshipName>Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_Points__c</fullName>
        <label>Experience Points</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_ValueText__c</fullName>
        <label>Value Text</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>To Process</fullName>
                    <default>true</default>
                    <label>To Process</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloSVY__SurveyResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Response</label>
        <referenceTo>FieloSVY__SurveyResponse__c</referenceTo>
        <relationshipLabel>Event</relationshipLabel>
        <relationshipName>Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>Prova_vista_event</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>FieloEE__Type__c</columns>
        <columns>F_PRM_Points__c</columns>
        <filterScope>Mine</filterScope>
        <label>Prova_vista_event</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>